fixed body overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     align-items: center;
     caret-color: transparent;
     background-color: var(--background-color-secondary);
+    overflow: clip;
 }
 
 .apploginWrapper {
@@ -20,6 +21,7 @@
   align-items: center;
   caret-color: transparent;
   background-color: var(--background-color-secondary);
+  overflow: clip;
 }
 
 .colorInput {
